applications/pod-sync/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: podsync
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    name: podsync
status:
  loadBalancer: {}
